--- a/voksenopplering/src/App.css
+++ b/voksenopplering/src/App.css
@@ -86,6 +86,7 @@
   border-radius: 8px;
   background-color: #d1e8f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
 }
 
 .Norsk:hover,
