--- a/Exsamen2024/src/loginStyles.css
+++ b/Exsamen2024/src/loginStyles.css
@@ -3,11 +3,11 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f0f0f0;
-    margin: 0;
+    /* margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
   }
   
