--- a/Exsamen2024/src/kantineStyles.css
+++ b/Exsamen2024/src/kantineStyles.css
@@ -4,12 +4,13 @@ body, html {
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
+  height: fit-content;
 }
 
 /* Container for the entire page */
 .pageContainer {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: flex-start;
   flex-direction: column;
   min-height: 100vh;
@@ -23,6 +24,7 @@ body, html {
   gap: 20px;
   width: 100%;
   max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* Style for each item */
@@ -45,7 +47,7 @@ body, html {
 /* Image styling */
 .itemImage {
   width: 100%;
-  height: auto;
+  height: 40%;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -54,12 +56,15 @@ body, html {
   margin: 10px 0;
   color: #333;
   font-size: 1.5rem;
+  height: 20%;
 }
 
 /* Price and stock styling */
 .item p {
   margin: 5px 0;
   color: #666;
+  font-size: 1.5rem;
+  height: 10%;
 }
 
 /* Button styling */
@@ -72,6 +77,7 @@ body, html {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
+  width: 70%;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
