--- a/Exsamen2024/src/handlevogn.css
+++ b/Exsamen2024/src/handlevogn.css
@@ -103,11 +103,86 @@
     width: 50%;
     height: 50vh;
     margin: 0 auto;
-    margin-top: 40vh;
+    margin-top: 3vh;
     /* border: 1px solid black; */
   }
 
   .handlekurvForm input {
     width: 100%;
-    height: 10%;
+    height: 13%;
+    font-size: 1rem;
+  }
+  
+
+
+  .handlekurvNav {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    height: 5vh;
+  }
+
+  
+  .handlekurvNav h2 {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .handlekurvNav p {
+    width: 50%;
+    text-align: center;
+  }
+  
+  .betalingsKnapp {
+    width: 50%;
+    height: 100%;
+  }
+  
+  .betalingsKnapp img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .sumDiv{
+    width: 80%;
+    height: inherit;
+  }
+  
+  .betalingsDiv{
+    width: 20%;
+    height: inherit;
+    display: flex;
+    justify-content: right;
+  }
+  
+  .toomHandlekurvDiv {
+    display: flex;
+    width: 100%;
+    height: 10vh;
+    margin-top: 1vh;
+  }
+  
+  .toomHandlekurv {
+    width: 40%;
+    height: 6vh;
+    margin: 0 auto;
+    background-color: white;
+    border: 2px solid gray;
+    border-radius: 10px;
+    transition: 0.2s;
+  }
+  
+  .toomHandlekurv:hover {
+    background-color: #003153;
+    color: white;
+    border: white 1px solid;
+  }
+
+  .itemContainer {
+    margin-top: 10vh;
+  }
+
+  .handlekurvSubmit {
+    width: 101%;
   }
