--- a/Exsamen2024/src/kantineStyles.css
+++ b/Exsamen2024/src/kantineStyles.css
@@ -5,6 +5,7 @@ body, html {
   padding: 0;
   background-color: #f5f5f5;
   height: fit-content;
+  overflow-x: hidden;
 }
 
 /* Container for the entire page */
@@ -47,7 +48,7 @@ body, html {
 /* Image styling */
 .itemImage {
   width: 100%;
-  height: 40%;
+  height: 12vh;
   border-bottom: 1px solid #eeeeee;
 }
 
