--- a/Exsamen2024/src/handlevogn.css
+++ b/Exsamen2024/src/handlevogn.css
@@ -104,6 +104,7 @@
     height: 50vh;
     margin: 0 auto;
     margin-top: 3vh;
+    margin-bottom: 10vh;
     /* border: 1px solid black; */
   }
 
